@@ -2,7 +2,7 @@
 .SH "NAME"
 realcsh.c \- A shell for running C code
 .SH "SYNOPSIS"
-.BI "realcsh.c "
+.BI "realcsh.c [" "gcc options" "]"
 .SH "DESCRIPTION"
 .B "realcsh.c"
 is an interactive shell that runs C source code.
@@ -19,7 +19,6 @@ at the start of sourcecode.
 
 The list of such lines can be seen with
 .B "##"
-
 
 .SH "EXAMPLES"
 
