@@ -1,8 +1,9 @@
 binfmtc (0.12-2) UNRELEASED; urgency=low
 
   * realcxxsh.cc
+  * realcsh.c improvement.
 
- -- Junichi Uekawa <dancer@debian.org>  Sun, 10 Sep 2006 01:29:44 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Wed, 13 Sep 2006 19:30:42 +0900
 
 binfmtc (0.12-1) unstable; urgency=low
 
